Moved JS into a seperate file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,8 +18,7 @@
             "unix"
         ],
         "quotes": [
-            "error",
-            "double"
+            "off"
         ],
         "semi": [
             "error",
